--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-async-computed": "^3.8.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
